--- a/css/style.css
+++ b/css/style.css
@@ -24,16 +24,28 @@ input[type=number]:focus {
 
 button {
   background-color: #e7e7e7;
-    color: black;
-    border: none;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+  color: black;
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 button:hover {
   background-color: #d7d7d7;
+}
+
+input.color {
+  outline: none;
+  transition: 0.2s;
+  font-size: 16px;
+  width: 5em;
+  text-align: center;
+}
+input.color:focus {
+  border-width: 3px !important;
+  font-size: 18px;
 }
