--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 /* remove spinners: https://stackoverflow.com/a/22559163/5818631 */
-input[type='number'] {
+input.text {
   -moz-appearance:textfield;
 }
 input::-webkit-outer-spin-button,
@@ -12,18 +12,21 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
 }
 
-input[type=number] {
-    width: 2em;
-    margin: 0.2em 0;
-    box-sizing: border-box;
-    border: none;
-    border-bottom: 0.1em solid grey;
-    text-align: center;
-    transition: 0.2s;
-    outline: none;
+input.text {
+  width: 2em;
+  margin: 0.2em 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 0.1em solid grey;
+  text-align: center;
+  transition: 0.2s;
+  outline: none;
 }
-input[type=number]:focus {
-    border-bottom: 0.15em solid black;
+input.text.wide {
+  width: 15em;
+}
+input.text:focus {
+  border-bottom: 0.15em solid black;
 }
 
 button {
