--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,10 @@ input.color:focus {
   background-color: #002b36;
   color: white;
 }
+button.active {
+  background-color: #002b36;
+  color: white;
+}
 
 .submenu {
   padding: 0 0 0 1em;
